<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CompleteProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/complete_profile_info"
            android:labelFor="@+id/name_editText"
            android:textColor="#cccccc"
            android:textSize="12sp"
            android:layout_marginBottom="25dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_string"
            android:labelFor="@+id/name_editText"/>

        <EditText
            android:id="@+id/name_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:paddingVertical="15dp"
            android:inputType="text"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/occupation"
            android:labelFor="@+id/occupation_editText"
            />
        <EditText
            android:id="@+id/occupation_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:paddingVertical="15dp"
            android:inputType="text"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:labelFor="@+id/age_editText"/>
        <EditText
            android:id="@+id/age_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="15dp"
            android:inputType="number"/>

        <TextView
            android:id="@+id/skip_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:textColor="@color/colorAccent"
            android:text="Skip"
            android:layout_margin="15dp"/>

        <Button
            android:id="@+id/send_info_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/continue_string"
            android:background="@color/colorPrimary"/>

    </LinearLayout>


</RelativeLayout>