<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".PhoneNumberFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/phone_number_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="+0123456789"
            android:inputType="phone"
            android:drawableStart="@drawable/ic_smartphone_white_24dp"
            android:drawablePadding="10dp"
            android:paddingVertical="15dp"
            android:paddingTop="36dp"
            android:hint="@string/phone_number"
            />

        <TextView
            android:id="@+id/info_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info"/>

        <Button
            android:id="@+id/send_button"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:text="@string/continue_string"
            android:layout_marginTop="36dp"/>

    </LinearLayout>

</RelativeLayout>